Refactor MacroProcessor for improved clarity and organization; enhance documentation and streamline methods