@@ -2,15 +2,25 @@ package sicxesimulator.software.macroprocessor;
 
 import sicxesimulator.common.utils.Constants;
 import sicxesimulator.common.utils.FileUtils;
+import sicxesimulator.software.data.MacroDefinition;
 
 import java.io.IOException;
 import java.util.*;
 
 /**
- * Processador de macros do montador SIC/XE.
+ * Processador de macros para o assembler SIC/XE.
  *
- * <p>Responsável por detectar definições de macros, armazená-las e expandi-las
- * no arquivo-fonte. Também realiza substituição de parâmetros formais por argumentos reais.</p>
+ * <p>Detecta definições de macros no código-fonte, armazena-as em tabela interna,
+ * expande chamadas de macros substituindo parâmetros por argumentos reais
+ * e grava o resultado em arquivo temporário.</p>
+ *
+ * <p>Fluxo principal:</p>
+ * <ol>
+ *   <li>Lê o conteúdo do arquivo de entrada.</li>
+ *   <li>Analisa definições de macros (MACRO...MEND), populando {@code macroTable}.</li>
+ *   <li>Expande cada linha, substituindo invocações de macro por seu corpo.</li>
+ *   <li>Filtra linhas em branco e grava o arquivo de saída em {@link Constants#TEMP_DIR}.</li>
+ * </ol>
  */
 public class MacroProcessor {
     private final Map<String, MacroDefinition> macroTable = new HashMap<>();
@@ -18,175 +28,182 @@ public class MacroProcessor {
     /**
      * Processa o arquivo-fonte, detectando e expandindo macros.
      *
-     * <p>O conteúdo expandido é salvo em {@code outputFile}, dentro de {@link Constants#TEMP_DIR}.</p>
-     *
-     * @param inputFile Nome do arquivo-fonte de entrada (com macros).
-     * @param outputFile Nome do arquivo de saída (ex: "MASMAPRG.ASM").
-     * @throws IOException Em caso de falha na leitura ou escrita de arquivos.
+     * @param inputFile  caminho do arquivo de entrada (contém macros)
+     * @param outputFile nome do arquivo de saída expandido (ex: "PROG.ASM")
+     * @throws IOException              em caso de erro de I/O
+     * @throws NullPointerException     se {@code inputFile} ou {@code outputFile} forem nulos
      */
     public void process(String inputFile, String outputFile) throws IOException {
-        // Limpa definições antigas
-        macroTable.clear();
+        Objects.requireNonNull(inputFile,  "inputFile não pode ser nulo");
+        Objects.requireNonNull(outputFile, "outputFile não pode ser nulo");
 
-        // Lê o conteúdo do arquivo de entrada utilizando FileUtils
-        String inputContent = FileUtils.readFile(inputFile);
-        String[] sourceLines = inputContent.split("\\r?\\n");
-        List<String> outputLines = new ArrayList<>();
-        Deque<MacroDefinition> macroStack = new ArrayDeque<>();
+        // 1) Leitura
+        String content = FileUtils.readFile(inputFile);
+        String[] sourceLines = content.split("\\r?\\n", -1);
 
-        for (String line : sourceLines) {
-            String trimmed = line.trim();
+        // 2) Primeira passagem: coleta definições de macro
+        List<String> nonMacroLines = parseDefinitions(sourceLines);
 
-            // Linha vazia: preservar conforme contexto
-            if (trimmed.isEmpty()) {
-                if (macroStack.isEmpty()) {
-                    outputLines.add(line);
-                } else {
-                    macroStack.peek().addLine(line);
-                }
-                continue;
-            }
+        // 3) Segunda passagem: expande invocações de macro
+        List<String> expandedLines = expandAll(nonMacroLines);
 
-            String[] parts = trimmed.split("\\s+", 3);
-            // Se a linha tiver pelo menos dois tokens e o segundo for "MACRO", inicia definição
-            if (parts.length >= 2 && parts[1].equalsIgnoreCase("MACRO")) {
-                String macroName = parts[0].toUpperCase();
-                // Se houver terceiro token, trata-o como lista de parâmetros
-                List<String> params = new ArrayList<>();
-                if (parts.length == 3) {
-                    String paramPart = parts[2].trim();
-                    // Se os parâmetros estiverem separados por vírgula
-                    String[] paramTokens = paramPart.split(",");
-                    for (String p : paramTokens) {
-                        params.add(p.trim().toUpperCase());
-                    }
-                }
-                MacroDefinition macroDef = new MacroDefinition(macroName, params);
-                macroStack.push(macroDef);
-                continue;
-            }
+        // 4) Filtra linhas em branco
+        List<String> filtered = filterEmptyLines(expandedLines);
 
-            // Fim da definição de macro
-            if (!macroStack.isEmpty() && trimmed.equalsIgnoreCase("MEND")) {
-                MacroDefinition completedMacro = macroStack.pop();
-                macroTable.put(completedMacro.getName().toUpperCase(), completedMacro);
-                continue;
-            }
-
-            // Se estamos em uma definição, adiciona a linha à macro corrente
-            if (!macroStack.isEmpty()) {
-                macroStack.peek().addLine(line);
-            } else {
-                // Linha fora de macro: adiciona ao corpo principal
-                outputLines.add(line);
-            }
-        }
-
-        List<String> expandedLines = new ArrayList<>();
-        for (String line : outputLines) {
-            try {
-                List<String> expanded = expandLine(line);
-                expandedLines.addAll(expanded);
-            } catch (Exception e) {
-                // TODO: Melhorar tratamento de erros, inserir um log aqui.
-                // Em caso de erro, preserva a linha original
-                expandedLines.add(line);
-            }
-        }
-
-        // Converte a lista de linhas em uma única string separada por quebras de linha, removendo as linhas em branco
-        List<String> filtered = new ArrayList<>();
-        for (String line : expandedLines) {
-            if (!line.trim().isEmpty()) {
-                filtered.add(line);
-            }
-        }
-
-        String expandedContent = String.join("\n", filtered);
-
-        // Salva o arquivo de saída no diretório TEMP_DIR utilizando FileUtils
-        FileUtils.writeFileInDir(Constants.TEMP_DIR, outputFile, expandedContent);
-        // TODO: Adicionar log de sucesso
+        // 5) Grava o resultado
+        String result = String.join("\n", filtered);
+        FileUtils.writeFileInDir(Constants.TEMP_DIR, outputFile, result);
     }
 
     /**
-     * Tenta expandir uma linha caso ela seja uma chamada de macro.
+     * Analisa linhas retroativamente, detecta blocos MACRO...MEND
+     * e registra definições em {@code macroTable}.
      *
-     * @param line Linha original do código-fonte.
-     * @return Lista de linhas expandidas ou a linha original.
+     * @param lines array de linhas do código-fonte original
+     * @return lista de linhas sem as definições de macro
+     */
+    private List<String> parseDefinitions(String[] lines) {
+        macroTable.clear();
+        List<String> output = new ArrayList<>();
+        Deque<MacroDefinition> stack = new ArrayDeque<>();
+
+        for (String line : lines) {
+            String trimmed = line.trim();
+            if (stack.isEmpty()) {
+                // detecta início de definição
+                String[] parts = trimmed.split("\\s+", 3);
+                if (parts.length >= 2 && parts[1].equalsIgnoreCase("MACRO")) {
+                    String name = parts[0].toUpperCase();
+                    List<String> params = new ArrayList<>();
+                    if (parts.length == 3) {
+                        for (String p : parts[2].split(",")) {
+                            params.add(p.trim().toUpperCase());
+                        }
+                    }
+                    stack.push(new MacroDefinition(name, params));
+                } else {
+                    output.add(line);
+                }
+            } else {
+                // dentro de uma definição
+                if (trimmed.equalsIgnoreCase("MEND")) {
+                    MacroDefinition def = stack.pop();
+                    macroTable.put(def.getName().toUpperCase(), def);
+                } else {
+                    stack.peek().addLine(line);
+                }
+            }
+        }
+        return output;
+    }
+
+    /**
+     * Expande todas as linhas, substituindo invocações de macros
+     * pelo corpo definido em {@code macroTable}.
+     *
+     * @param lines lista de linhas sem definições de macro
+     * @return lista de linhas com macros expandidas
+     */
+    private List<String> expandAll(List<String> lines) {
+        List<String> result = new ArrayList<>();
+        for (String line : lines) {
+            try {
+                result.addAll(expandLine(line));
+            } catch (Exception e) {
+                // falha na expansão: preserva a linha original
+                result.add(line);
+            }
+        }
+        return result;
+    }
+
+    /**
+     * Remove linhas vazias do código expandido.
+     *
+     * @param lines lista de linhas possivelmente com strings em branco
+     * @return nova lista sem linhas vazias
+     */
+    private List<String> filterEmptyLines(List<String> lines) {
+        List<String> filtered = new ArrayList<>();
+        for (String l : lines) {
+            if (!l.trim().isEmpty()) {
+                filtered.add(l);
+            }
+        }
+        return filtered;
+    }
+
+    /**
+     * Expande uma única linha se ela invoca uma macro registrada.
+     *
+     * @param line linha de código a processar
+     * @return lista de linhas expandidas ou a própria linha se não invocar macro
      */
     private List<String> expandLine(String line) {
         String trimmed = line.trim();
         if (trimmed.isEmpty()) {
             return List.of(line);
         }
-        String[] tokens = trimmed.split("\\s+");
-        // Caso simples: linha com apenas um token (possível chamada de macro sem rótulo e sem parâmetros)
-        if (tokens.length == 1) {
-            String token = tokens[0].toUpperCase();
-            if (macroTable.containsKey(token)) {
-                MacroDefinition macro = macroTable.get(token);
-                return expandMacro(macro, Collections.emptyList(), null);
-            } else {
-                return List.of(line);
-            }
-        } else {
-            // Linha com pelo menos 2 tokens
-            String possibleMacro = tokens[1].toUpperCase();
-            if (macroTable.containsKey(possibleMacro)) {
-                MacroDefinition macro = macroTable.get(possibleMacro);
-                List<String> args = new ArrayList<>();
+        String[] tokens = trimmed.split("\\s+", 3);
+        String label = null, nameToken;
+        List<String> args = Collections.emptyList();
 
-                // Linha com 3 tokens ou mais
-                if (tokens.length >= 3) {
-                    String argPart = tokens[2];
-                    String[] argTokens = argPart.split(",");
-                    for (String a : argTokens) {
-                        args.add(a.trim());
-                    }
-                }
-                // Se a linha tiver um rótulo, preserve-o apenas na primeira linha da expansão.
-                String label = tokens[0];
-                return expandMacro(macro, args, label);
-            } else {
-                return List.of(line);
+        if (tokens.length == 1) {
+            nameToken = tokens[0].toUpperCase();
+        } else {
+            label = tokens[0];
+            nameToken = tokens[1].toUpperCase();
+            if (tokens.length == 3) {
+                args = Arrays.stream(tokens[2].split(","))
+                        .map(String::trim)
+                        .toList();
             }
         }
+
+        MacroDefinition macro = macroTable.get(nameToken);
+        if (macro == null) {
+            return List.of(line);
+        }
+        return expandMacro(macro, args, label);
     }
 
     /**
-     * Expande uma macro substituindo parâmetros por argumentos reais.
+     * Realiza a expansão de uma macro: substitui parâmetros por argumentos
+     * e processa recursivamente possíveis chamadas internas.
      *
-     * @param macro Definição da macro.
-     * @param args Argumentos passados na chamada (pode estar vazio).
-     * @param label Rótulo opcional que será aplicado à primeira linha expandida.
-     * @return Linhas expandidas da macro.
+     * @param macro definição da macro
+     * @param args lista de argumentos reais (pode ser vazia)
+     * @param label rótulo a prefixar na primeira linha expandida (pode ser nulo)
+     * @return linhas resultantes da expansão
+     * @throws IllegalArgumentException se a quantidade de args não bater com a de params
      */
-    private List<String> expandMacro(MacroDefinition macro, List<String> args, String label) {
+    private List<String> expandMacro(MacroDefinition macro,
+                                     List<String> args,
+                                     String label) {
         List<String> expanded = new ArrayList<>();
-        Map<String, String> paramMap = new HashMap<>();
         List<String> params = macro.getParameters();
 
-        if (!params.isEmpty()) {
-            if (args.size() != params.size()) {
-                throw new IllegalArgumentException("Numero de argumentos (" + args.size() +
-                        ") nao corresponde ao numero de parametros (" + params.size() + ") para a macro " + macro.getName());
-            }
-            for (int i = 0; i < params.size(); i++) {
-                paramMap.put(params.get(i), args.get(i));
-            }
+        if (args.size() != params.size()) {
+            throw new IllegalArgumentException(
+                    "Número de argumentos (" + args.size() +
+                            ") não corresponde a parâmetros (" + params.size() + ")");
         }
-        boolean firstLine = true;
-        for (String macroLine : macro.getBody()) {
-            String expandedLine = macroLine;
-            for (Map.Entry<String, String> entry : paramMap.entrySet()) {
-                expandedLine = expandedLine.replace(entry.getKey(), entry.getValue());
+        Map<String,String> map = new HashMap<>();
+        for (int i = 0; i < params.size(); i++) {
+            map.put(params.get(i), args.get(i));
+        }
+
+        boolean first = true;
+        for (String bodyLine : macro.getBody()) {
+            String out = bodyLine;
+            for (Map.Entry<String,String> e : map.entrySet()) {
+                out = out.replace(e.getKey(), e.getValue());
             }
-            if (firstLine && label != null && !label.isEmpty()) {
-                expandedLine = label + " " + expandedLine;
-                firstLine = false;
+            if (first && label != null && !label.isEmpty()) {
+                out = label + " " + out;
+                first = false;
             }
-            expanded.addAll(expandLine(expandedLine));
+            expanded.addAll(expandLine(out));
         }
         return expanded;
     }
